# tgui.js

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  cmakebuild  compile  configure  csfmlLib.ts  ctguiLib.ts  deno.json  gen.ts  index.ts  lib.c  lib.cpp  lib.ts  main.c  main.cpp  main.ts  mod.ts  setup.ts  sim.txt  ui.ts  utils.ts  windows_toolchain.cmake
.github/workflows/: build.yml  ci.yml  release.yml
bindings/: bindings.cpp  bindings.hpp  csfmlSymbols.ts
debug/: compile  example.ts  index.ts  lib.c  lib.ts  main.c  main.cpp  main.ts
examples/various-widgets/: deno.json  main.ts  variousWidgets.ts
extend/: extend.cpp  extend.h
generator/: ast.sh  ast.ts  declarations.ts  externSearch.ts  funcs.ts  function-declarations.json  gen.ts  libgen  libraryGenerator.ts  merged.c  symbgen  symbolGenerator.ts  symbols.ts  type-map-pre.json  type-map.json  typeMap.ts  utils.ts
src/: ctgui.ts  ctguiSymbols.ts  lib.ts  setup.ts
src/utils/: structToBuffer.ts
support/: Config.h  Macros.cmake.in
symbols/: csfmlSymbols.ts  ctguiSymbols.ts
